# rednote_mcp

./: pyproject.toml
src/rednote_mcp_server/: browser_handler.py  server.py  system_prompt.txt
