[project]
name = "rednote-mcp-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "myles", email = "378962505@qq.com" }
]
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.8.0",
    "playwright>=1.30.0",
    "pydantic>=2.0.0",
    "fastmcp",
    "uvicorn[standard]",
    "pytesseract>=0.3.13",
    "requests>=2.32.3",
    "openai-whisper>=20240930",
    "moviepy>=2.2.1",
]


[project.scripts]
rednote-mcp-server = "rednote_mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
